# retriever

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.beads/: metadata.json  redirect
.github/workflows/: ci.yml  claude.yml  release.yml
backend/: CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_vector_storage.py  003_semantic_cache.py  004_updated_at_trigger.py  005_document_columns.py
backend/src/retriever/: config.py  main.py
backend/src/retriever/infrastructure/cache/: __init__.py  pg_cache.py  protocol.py
backend/src/retriever/infrastructure/database/: session.py
backend/src/retriever/infrastructure/embeddings/: __init__.py  exceptions.py  openai.py  protocol.py
backend/src/retriever/infrastructure/llm/: __init__.py  fallback.py  openrouter.py  protocol.py
backend/src/retriever/infrastructure/observability/: langfuse.py  logging.py  middleware.py  tracing.py
backend/src/retriever/infrastructure/safety/: __init__.py  confidence.py  detector.py  hallucination.py  moderation.py  schemas.py  service.py
backend/src/retriever/infrastructure/vectordb/: __init__.py  pgvector_store.py  protocol.py
backend/src/retriever/models/: __init__.py  base.py  document.py  message.py  user.py
backend/src/retriever/modules/auth/: __init__.py  dependencies.py  jwks.py  schemas.py
backend/src/retriever/modules/documents/: __init__.py  exceptions.py  repos.py  routes.py  schemas.py  services.py
backend/src/retriever/modules/messages/: __init__.py  repos.py  routes.py  schemas.py
backend/src/retriever/modules/rag/: __init__.py  chunker.py  dependencies.py  docling_processor.py  exceptions.py  loader.py  prompts.py  retriever.py  routes.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_chunker.py  test_config.py  test_docling_processor.py  test_document_routes.py  test_document_service.py  test_embeddings.py  test_health.py  test_hybrid_retriever.py  test_llm_fallback.py  test_llm_provider.py  test_loader.py  test_message_repos.py  test_message_routes.py  test_models.py  test_observability.py  test_prompts.py  test_rag_dependencies.py  test_rag_routes.py  test_rag_service.py  test_safety.py  test_vectordb.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_document_lifecycle.py  test_health.py  test_input_validation.py  test_rag_and_history.py
backend/tests/integration/fixtures/: test-doc.md
docs/: architecture.md  development-standards.md  implementation-plan.md  increments.md  pre-pr-testing-script.md
docs/decisions/: 000-template.md  001-tech-stack.md  002-llm-provider-strategy.md  003-system-architecture.md  004-vector-database.md  005-embedding-model.md  006-frontend-architecture.md  007-authentication-strategy.md  008-observability-stack.md  009-content-safety.md  010-resilience-patterns.md  011-development-environment.md  012-rate-limiting.md  013-semantic-caching.md  014-hallucination-detection.md  015-prompt-injection-defense.md  016-hybrid-retrieval.md  017-conversation-history-schema.md  018-gcp-native-observability.md  019-docling-document-processing.md
docs/guides/: adding-documents.md  cloudrun-deployment.md  deployment.md
docs/plans/: stack-migration.md
documents/: FOHA_2024_Impact_Report.md  FOHA_Caring_for_Your_Rescue_Dog.md  FOHA_Dog_Adoption_Event_Instructions.md  FOHA_Dog_Foster_Handbook.md  FOHA_Dog_Walker_Guide.md  FOHA_Puppy_Foster_Handbook.md  FOHA_Snout_and_About_Guidelines.md  FOHA_Volunteer_Social_Media_Guide.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  svelte.config.js  wrangler.toml
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/api/: base-client.ts  client.ts  types.ts
frontend/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  ClearHistoryButton.svelte  ConfidenceBadge.svelte  DocumentList.svelte  DocumentUpload.svelte  (+2 more)
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/tests/e2e/: admin.spec.ts  auth.spec.ts  chat.spec.ts  home.spec.ts
scripts/: README.md  check_version.py  create_user.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  health.py  rate_limit.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py  chroma_cache.py  exceptions.py  protocol.py
src/infrastructure/database/: __init__.py  connection.py
src/infrastructure/embeddings/: __init__.py  openai.py
src/infrastructure/llm/: __init__.py  exceptions.py  fallback.py  openrouter.py  protocol.py
src/infrastructure/observability/: __init__.py  setup.py  structlog_processor.py  tracing.py
src/infrastructure/safety/: __init__.py  confidence.py  detector.py  hallucination.py  moderation.py  schemas.py  service.py
src/infrastructure/vectordb/: __init__.py  chroma.py  exceptions.py  protocol.py
src/modules/: __init__.py
src/modules/auth/: __init__.py  models.py  password.py  repository.py  routes.py  schemas.py  service.py
src/modules/documents/: __init__.py  exceptions.py  models.py  repository.py  schemas.py  service.py
src/modules/rag/: __init__.py  chunker.py  loader.py  message_store.py  prompts.py  quality.py  retriever.py  schemas.py  service.py
src/web/: __init__.py  admin_routes.py  auth_routes.py  dependencies.py  routes.py  templates.py
src/web/templates/: base.html  index.html
supabase/: config.toml
tests/: __init__.py  golden_dataset.json  test_auth.py  test_auth_routes.py  test_chunker.py  test_dependencies.py  test_documents.py  test_embeddings.py  test_health.py  test_hybrid_retriever.py  test_llm_fallback.py  test_llm_provider.py  test_loader.py  test_markdown_filter.py  test_message_store.py  test_moderation.py  test_observability.py  test_rag_quality.py  test_rag_service.py  test_safety.py  test_semantic_cache.py  test_vectordb.py  test_web.py
(+54 files in other folders)
