[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodpuppy"
version = "0.1.0"
description = "AI-powered Q&A system for shelter volunteers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "GoodPuppy Team" }]

dependencies = [
    # Web framework
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.32.0",
    # Templates & Forms
    "jinja2~=3.1.4",
    "python-multipart~=0.0.12",  # Form handling
    # Configuration
    "pydantic~=2.10.0",
    "pydantic-settings~=2.6.0",
    # Logging
    "structlog~=24.4.0",
    # LLM Integration
    "openai~=1.59.0",  # OpenRouter uses OpenAI-compatible API
    # Resilience
    "tenacity~=9.0.0",  # Retries with exponential backoff
    "aiobreaker~=1.2.0",  # Circuit breaker for async
    # Rate limiting
    "slowapi~=0.1.9",
    # RAG Pipeline (Increment 3)
    "chromadb~=0.5.0",  # Embedded vector database
    # Hybrid Retrieval (Increment 5)
    "rank-bm25~=0.2.2",  # BM25 keyword search
    "aiosqlite>=0.22.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.10.1",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",  # For TestClient async support

    # Type checking
    "mypy>=1.13.0",

    # Linting & formatting
    "ruff>=0.8.0",

    # Security
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "slowapi",
    "slowapi.errors",
    "slowapi.util",
    "aiobreaker",
    "tenacity",
    "openai",
    "openai.*",
    "chromadb",
    "chromadb.*",
    "rank_bm25",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
