[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retriever"
version = "2.0.0"
description = "AI-powered Q&A system for shelter volunteers"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Chris Krough" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retriever"]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["retriever"]

[tool.mypy]
strict = true
mypy_path = "src"
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/retriever --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/retriever"]
omit = ["*/tests/*"]
